# Monte-Carlo-implementation

./: .gitignore  CMakeLists.txt  README.md  ray.txt
include/: Camera.h  ColorDbl.h  Pixel.h  Scene.h  Vertex.h  direction.h  ray.h  triangle.h
src/: Camera.cpp  ColorDbl.cpp  Pixel.cpp  Scene.cpp  Vertex.cpp  direction.cpp  main.cpp  ray.cpp  triangle.cpp
